@@ -1,3 +1,6 @@
+2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* forked_player.cc: don't go into infinite loop when player fails
+
 2003-02-20  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* combat.cc (Combat): Wisps can teleport (partly done).
